# chip8-emulator

./: CMakeLists.txt
includes/: cpu.h
src/: README.md  cpu.cpp  main.cpp
